# phidler

./: .gitignore  README.md  mkdocs.yml  project.phidler  pyproject.toml  run.sh  run_tests.sh
.github/workflows/: appimage.yml  docs.yml  remote-setup.yml
docs/: capture_screenshots.py  development.md  faq.md  guide.md  hooks.py  index.md  shortcuts.md  tour.md  tutorial.md
nereid-backend/: README.md
nereid-backend/phidler-fdtd/: main.py  model_inference.textproto
packaging/appimage/: build.sh  make_icon.py
packaging/appimage/phidler/: entrypoint.sh  phidler.desktop  requirements.txt
src/phidler/: __main__.py  app.py  custom_components.py  drc.py  export_script.py  fdtd_nereid.py  fdtd_remote.py  fdtd_sim.py  fdtd_subprocess.py  fdtd_tidy3d.py  import_script.py  main_window.py  pdk_catalog.py  project_io.py  recent_projects.py  remote_config.py  remote_setup_probe.py  waveguide_calc.py
src/phidler/ai/: __init__.py  claude_session.py  mcp_server.py
src/phidler/canvas/: annotation_item.py  polygon_item.py  scene.py  transform_handles.py  transform_overlay.py  view.py
src/phidler/model/: annotation.py  commands.py  document.py  layers.py  placed_instance.py
src/phidler/panels/: component_palette.py  component_preview.py  console_panel.py  drc_panel.py  fdtd_window.py  layers_panel.py  project_settings_dialog.py  properties_panel.py  startup_dialog.py
tests/: conftest.py  test_ai_integration.py  test_align_distribute.py  test_annotations.py  test_array_instances.py  test_commands.py  test_component_palette.py  test_component_preview.py  test_console_panel.py  test_context_menu.py  test_cross_section_ui.py  test_cursor_position.py  test_custom_components.py  test_diagonal_routing.py  test_drc.py  test_export_script.py  test_fdtd_memory.py  test_fdtd_nereid.py  test_fdtd_remote.py  test_fdtd_sim.py  test_fdtd_subprocess.py  test_fdtd_tidy3d.py  test_fdtd_window.py  test_gds_roundtrip.py  test_grid_pitch.py  test_holes.py  test_import_script.py  test_kicad_selection.py  test_main_window.py  test_measure_tool.py  test_multilayer_selection.py  test_nereid_loopback.py  test_palette_and_properties.py  test_palette_preview_wiring.py  test_palette_thumbnails.py  test_pdk_catalog.py  test_pdk_catalog_naming.py  test_placed_instance_repr.py  test_port_snapping.py  test_project_io.py  (+21 more)
