[project]
name = "phidler"
version = "0.1.0"
description = "Graphical CAD application for photonic integrated circuit layout, built on gdsfactory"
# gdsfactory (>=9.44) requires Python 3.11–3.13, so phidler does too — declaring
# >=3.10 let an install start on 3.10 only to fail later resolving gdsfactory.
requires-python = ">=3.11"
dependencies = [
    "gdsfactory>=9.44.0",
    "PySide6>=6.7.0",
]

# `phidler` launches the app (same entry point as `python -m phidler`). This is
# also what the AppImage's entry point wraps. gui-scripts (vs scripts) makes a
# no-console GUI launcher on Windows; on Linux it's an ordinary console script.
[project.gui-scripts]
phidler = "phidler.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
docs = [
    "mkdocs>=1.6.0",
]
# photonfdtd isn't published on PyPI yet (sibling project, not a Phidler
# package) — install it from its own checkout first
# (pip install -e /path/to/photonfdtd), then this version constraint will
# already be satisfied and `pip install -e ".[fdtd]"` won't need network
# access for it. Phidler tracks photonfdtd 0.9.x. Since 0.4 it has gained the
# differentiable JAX backend and anisotropic subpixel smoothing; 0.9 makes JAX
# the GPU backend (it runs on the GPU through XLA) and deprecates the old CuPy
# use_gpu path. The FDTD window surfaces the JAX (GPU) and subpixel options and
# marks the CuPy GPU box as legacy (see panels/fdtd_window.py).
#
# GPU acceleration is optional and unpinned. Prefer JAX: install a GPU-capable
# jax (e.g. pip install "jax[cuda12]" for an NVIDIA GPU, or plain `pip install
# jax` for CPU) to enable the "JAX (GPU)" checkbox. The legacy CuPy path is also
# unpinned — install CuPy to match your hardware (pip install cupy-cuda12x for
# NVIDIA, cupy-rocm-5-0 for AMD) if you specifically need it. Leaving both out
# just runs on CPU (NumPy/Numba).
fdtd = [
    "photonfdtd>=0.9.1",
    "matplotlib>=3.7",
    # Numba JIT-compiles photonfdtd's field-update kernel (parallel, cached to
    # disk) — ~5x faster than the plain NumPy engine and, like JAX, runs in the
    # worker thread so the UI stays responsive. Enabled by default when
    # importable.
    "numba>=0.59",
]
# Optional AI assistant: an in-process MCP server exposes phidler's live
# scripting session, and the Console panel's "Ask Claude" mode drives the
# Claude Code CLI (`claude`, installed separately) against it — every AI edit
# runs through the same Python console the user types into. Entirely optional:
# without `mcp` (or the `claude` binary) the app runs exactly as before and the
# AI mode is disabled with an explanatory tooltip. See src/phidler/ai/.
ai = [
    "mcp>=1.2",
]
# Offload FDTD runs to a remote nereid-server over gRPC (phidler.fdtd_nereid).
# Only grpcio + protobuf are needed at runtime; the generated stubs in
# phidler._nereid are committed, so no protoc toolchain is required to *use* it
# (only to regenerate — see src/phidler/_nereid/README.md). These floors are the
# versions the committed stubs were generated against (their own embedded guards
# refuse to import under anything older); they move when the stubs are
# regenerated, and a looser floor needs an older grpcio-tools at generation time.
nereid = [
    "grpcio>=1.81.1",
    "protobuf>=6.33.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # A few generic-PDK components (coupler_bend, coupler_ring_bend,
    # ring_double_bend_coupler) build valid sub-90° euler bends, which makes
    # gdsfactory's bend_euler nag. The components are fine — silence just this
    # message here too (the app filters it in activate_pdk, but pytest manages
    # its own warning-filter stack and resets that one).
    "ignore:bend_euler angle should be 90 or 180:UserWarning",
]
